--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -8,20 +8,9 @@
   
 <div id="login-box">
   <div class="left">
-    <h1>Sign up</h1>
     
-    <input type="text" id="email" name="email" placeholder="E-mail" />
-    <input type="password" id="password" name="password" placeholder="Password" />
-    
-    <input type="submit" id="saveData" name="signup_submit" value="Sign in" />
+    <button class="social-signin google" id='login'>Log in with Google</button>
   </div>
-  
-  <div class="right">
-    <span class="loginwith">Sign in with<br />social network</span>
-    
-    <button class="social-signin google" id='login'>Log in with Google+</button>
-  </div>
-  <div class="or">OR</div>
 </div>
 </body>
 
@@ -64,7 +53,7 @@ signInWithPopup(auth, provider)
     // The AuthCredential type that was used.
     const credential = GoogleAuthProvider.credentialFromError(error);
     // ...
-    window.location = `https://chessgame-backend.herokuapp.com/failedLogin?error=${errorMessage}`
+    window.location = `https://chessgame-backend.herokuapp.com/app/login`
     alert(errorMessage);
   });
 });
