--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -7,7 +7,7 @@
 <body>
   
 <div id="login-box">
-  <div class="left">
+  <div class="or">
     
     <button class="social-signin google" id='login'>Log in with Google</button>
   </div>
