--- a/public/templates/cssFile.css
+++ b/public/templates/cssFile.css
@@ -24,11 +24,8 @@
   }
   
   .left {
-    position: absolute;
-    top: 0;
-    left: 0;
-    box-sizing: border-box;
-    padding: 40px;
+    position: relative;
+    
     width: 300px;
     height: 400px;
   }
@@ -93,12 +90,9 @@
   .or {
     position: absolute;
     top: 180px;
-    left: 280px;
+    left: 200px;
     width: 40px;
     height: 40px;
-    background: #DDD;
-    border-radius: 50%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
     line-height: 40px;
     text-align: center;
   }
